<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.food.devtime.devtimefood.PedidosEdit"
    tools:showIn="@layout/activity_pedido_toolbar">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/lblPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_add_shopping_cart_black_24dp"
                android:text="Pedido"
                android:textColor="#01476c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/txtNroPedido"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:text=""
                android:textColor="#01476c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/dtData"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblMesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:text="Mesa: "
                android:textColor="#01476c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/txtNroMesa"
                android:layout_width="53dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCliente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_assignment_ind_black_24dp"
            android:ems="10"
            android:enabled="false"
            android:hint="  Selecione o Cliente"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="  Observação"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_inbox_black_24dp"
            android:text=" Produtos"
            android:textColor="#01476c"
            android:textSize="14sp"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/lblAddProdutos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#cf5b51"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:drawableRight="@android:drawable/ic_input_add"
        android:gravity="center_vertical"
        android:text="Adicionar Produtos"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#080101"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categoria                                                      Quantidade"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorMenuPedidos1"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="0.50"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/lblAddProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/botao_redondo"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txtQtdProd"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lblDeleteProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/botao_redondo"
            android:drawableLeft="@android:drawable/ic_delete"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblProdutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="    ID     Produtos"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenuPedidos1"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtNroProduto"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lblQtdProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinnerProdutos"
                android:layout_width="278dp"
                android:layout_height="match_parent"
                android:background="@color/colorMenuPedidos1"
                android:spinnerMode="dialog" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:visibility="gone"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.96"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblProdAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#80a1b3"
            android:text="@string/produtos_adicionados"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <ListView
            android:id="@+id/listViewAddProduto"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarPedidosEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="false" />

</LinearLayout>
